Bug 151174 - sidebar transparency slider isn't hidden when it does not apply
Summary: sidebar transparency slider isn't hidden when it does not apply
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.1.2 release
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Properties-Area
  Show dependency treegraph
 
Reported: 2022-09-25 11:30 UTC by stragu
Modified: 2026-05-12 08:14 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2022-09-25 11:30:42 UTC
Description:
This regression shows the transparency slider for a shape even when the transparency setting does not make use of that control.

Steps to Reproduce:
1. Open Writer (or another component that can draw shapes)
2. Insert > Shape > Basic shapes > Rectangle, draw a rectangle
3. Sidebar > Properties > Area > Transparency dropdown, select something other than "None" or "Solid"
4. Select the same setting once more

Actual Results:
The first time the transparency setting is selected, the slider is still visible. Selecting the same setting once more makes the slider disappear.

Expected Results:
The slider should be hidden directly when the setting is selected, like in previous versions.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Slider is hidden properly in:

Version: 7.3.6.2 / LibreOffice Community
Build ID: c28ca90fd6e1a19e189fc16c05f8f8924961e12e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

but is not hidden on transparency setting selection in:

Version: 7.4.1.2 / LibreOffice Community
Build ID: 3c58a8f3a960df8bc8fd77b461821e42c061c5f0
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Roman Kuznetsov 2022-09-25 18:55:16 UTC
Confirm the problem in

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 943177e0f8074753db25d9a56d15f8010a755ffc
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

I couldn't to bisect it myself because the Area section layout was changed inside 7.4 development path and there is no the transparency slider in oldest step in bisect repo for Linear variant at least (I just try to triage the report with Linear variant).
Comment 2 Aron Budea 2022-10-08 13:18:17 UTC
This is a regression from the following commit, bibisected using repo bibisect-linux-64-7.5. Adding CC: to Samuel Mehrbrodt.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=adc536e9efc77690df62177aa722f9252bdbf96b
author		Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	2022-06-23 10:10:11 +0200
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	2022-06-24 08:12:25 +0200

tdf#128150 Properly show/hide widgets when "use slide background" is selected
Comment 3 Commit Notification 2022-11-03 13:23:50 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/490c2fc6080aa652b9b31385517aaf536f5bbd57

tdf#151174 Hide transparency widgets when not needed

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-11-04 11:38:39 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/8f0d52d122024d1ed0bd5f59d36e3ade5b7b5629

tdf#151174 Hide transparency widgets when not needed

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2022-11-04 13:54:15 UTC
Thank you very much Samuel!

Verified as fixed on:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 94c64c0c999eeaa91ebdc335186289046eacdc4f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded