tdf#151174 Hide transparency widgets when not needed

Regression from adc536e9efc77690df62177aa722f9252bdbf96b

Change-Id: I42d64fafe170d08e14bb4fe087a3e628ac862e49
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142221
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>